Fixed layout bugs

--- a/src/components/auctions/AuctionReview.scss
+++ b/src/components/auctions/AuctionReview.scss
@@ -178,6 +178,7 @@
         display: flex;
         h3 {
           width: 100%;
+          word-break: break-word;
           font-family: $sharpGroteskSemiBoldFont;
           font-style: normal;
           font-weight: 600;
